--- a/grupo_51.html
+++ b/grupo_51.html
@@ -8,6 +8,7 @@
     <h1>Universidad Autónoma de Entre Ríos</h1>
     <h2>Facultad de Ciencia y Tecnología</h2>
     <h3>Cátedra: Fundamentos de Computación</h3>
+     <h4>Eze</h4>
     <p>Trabajo Práctico N°1: Streaming de videojuegos</p>
     <p>Integrantes: [Nombres del grupo]</p>
     <p>Comisión: [Día y hora]</p>
