ajustes de la caratula

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -5,12 +5,44 @@
     <title>Trabajo Práctico N°1 - Grupo 51</title>
 </head>
 <body>
-    <h1>Universidad Autónoma de Entre Ríos</h1>
-    <h2>Facultad de Ciencia y Tecnología</h2>
-    <h3>Cátedra: Fundamentos de Computación</h3>
-    <p>Trabajo Práctico N°1: Streaming de videojuegos</p>
-    <p>Integrantes: [Nombres del grupo]</p>
-    <p>Comisión: [Día y hora]</p>
-    <p>Año lectivo: 2025</p>
+
+<header>
+    <h1></h1>
+    <h2></h2>
+    <h3>Carrera:</h3>
+    <h3>Cátedra:</h3>
+    <hr>
+</header>
+
+<section>
+    <h2>Trabajo Práctico N°1:</h2>
+
+    <article>
+        <h3>Profesores</h3>
+        <p>Bioing. Ismael Cassi (ADJ)</p>
+        <p>Lic. Paolo Orundés Cardinali (JTP)</p>
+    </article>
+
+    <article>
+        <h3>Integrantes del Grupo:</h3>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </article>
+
+    <article>
+        <p>Comisión</p>
+        <p>Fecha de Entrega: 
+        <p> Año lectivo: 2025</p>
+    </article>
+</section>
+
+<hr>
+
 </body>
 </html>
+
