--- a/grupo_51.html
+++ b/grupo_51.html
@@ -7,15 +7,15 @@
 <body>
 
 <header>
-    <h1></h1>
-    <h2></h2>
-    <h3>Carrera:</h3>
-    <h3>Cátedra:</h3>
+    <h1>Universidad Autonoma de Entre Rios</h1>
+    <h2>Facultad de Ciencias y Tecnologias</h2>
+    <h3>Carrera: Licenciatura en Sistemas</h3>
+    <h3>Cátedra:Fundamentos de Computacion</h3>
     <hr>
 </header>
 
 <section>
-    <h2>Trabajo Práctico N°1:</h2>
+    <h2>Trabajo Práctico N°1: Streaming de VideoJuegos</h2>
 
     <article>
         <h3>Profesores</h3>
@@ -26,18 +26,18 @@
     <article>
         <h3>Integrantes del Grupo:</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Pezzali Juan Ignacio</li>
+            <li>Tondello Ezequiel</li>
+            <li>Pereyra Thiago</li>
+            <li>Pross Alejo</li>
+            <li>Borgeat Nahuel</li>
         </ul>
     </article>
 
     <article>
-        <p>Comisión</p>
-        <p>Fecha de Entrega: 
-        <p> Año lectivo: 2025</p>
+        <p>Comisión 3 - Viernes</p>
+        <p>Fecha de Entrega: 31 de Octubre</p>
+        <p>Año lectivo: 2025</p>
     </article>
 </section>
 
