--- a/grupo_51.html
+++ b/grupo_51.html
@@ -28,7 +28,7 @@
         <ul>
             <li>Pezzali Juan Ignacio</li>
             <li>Tondello Ezequiel</li>
-            <li></li>
+            <li>Pereyra Thiago</li>
             <li>Pross Alejo</li>
             <li>Borgeat Nahuel</li>
         </ul>
