"Portada del trabajo práctico"

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -41,7 +41,11 @@
     </article>
 </section>
 <hr>
-
+<article>
+    <h2>Título: El sueño del streamer en construcción</h2>
+    <img src="sandbox:/mnt/data/ef6843b3-64d5-48cf-9a12-24101924f90a.png" 
+         alt="Streamer joven jugando desde su set up sencillo con notebook y tarjeta SUBE en la mesa.">
+</article>
 
 </body>
 </html>
