Estructura(promp usado y Explicacion))

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -47,6 +47,16 @@
          alt="Streamer joven jugando desde su set up sencillo con notebook y tarjeta SUBE en la mesa.">
 </article>
 
+<article>
+    <h3>Prompt usado:</h3>
+    <p></p>
+
+    <h3>Explicación:</h3>
+    <p>
+        
+    </p>
+</article>
+
 </body>
 </html>
 
