--- a/grupo_51.html
+++ b/grupo_51.html
@@ -49,11 +49,13 @@
 
 <article>
     <h3>Prompt usado:</h3>
-    <p></p>
+    <p>“quiero un joven entusiasmado con su espacio de streaming, con mesa sencilla, lámpara improvisada y una compu gamer pero sencilla, mostrando humildad y creatividad”</p>
 
     <h3>Explicación:</h3>
     <p>
-        
+        La imagen busca transmitir que el proyecto del streamer representa los primeros pasos hacia su objetivo.
+        El mensaje es que, aunque el equipamiento no sea perfecto, la motivación y la creatividad son suficientes
+        para comenzar a cumplir el sueño de ser streamer.
     </p>
 </article>
 
