requisitos recomendados del juego
no son requisitos oficiales de la empresa

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -58,6 +58,22 @@
         para comenzar a cumplir el sueño de ser streamer.
     </p>
 </article>
+<h1>Counter-Strike 2</h1>
+<h2>Requisitos recomendados</h2>
+</article>
+<h3
+<p>Estos requisitos son sugerencias de la comunidad y portales especializados (no oficiales de Valve):</p>
+<ul>
+  <li>Sistema Operativo: Windows 10 (64-bit)</li>
+  <li>Procesador: Intel Core i5-7500 o AMD Ryzen 5 1600</li>
+  <li>Memoria RAM: 16 GB</li>
+  <li>Tarjeta gráfica: NVIDIA GTX 1060 o AMD RX 580 (6 GB VRAM)</li>
+  <li>DirectX: Versión 11</li>
+  <li>Almacenamiento: 85 GB en SSD recomendado</li>
+</ul>
+
+
+
 
 </body>
 </html>
