--- a/grupo_51.html
+++ b/grupo_51.html
@@ -71,6 +71,17 @@
   <li>DirectX: Versión 11</li>
   <li>Almacenamiento: 85 GB en SSD recomendado</li>
 </ul>
+</article>
+<p>Counter-Strike 2 utiliza el motor Source 2, lo que mejora gráficos, físicas e iluminación. Por eso se recomienda un procesador de gama media, 16 GB de RAM y una GPU con 6 GB de VRAM para mantener buen rendimiento. Un SSD es ideal para tiempos de carga rápidos y evitar tirones durante el juego.
+</p>
+</article>
+
+
+
+
+
+
+
 
 
 
