--- a/grupo_51.html
+++ b/grupo_51.html
@@ -75,9 +75,9 @@
 <p>Counter-Strike 2 utiliza el motor Source 2, lo que mejora gráficos, físicas e iluminación. Por eso se recomienda un procesador de gama media, 16 GB de RAM y una GPU con 6 GB de VRAM para mantener buen rendimiento. Un SSD es ideal para tiempos de carga rápidos y evitar tirones durante el juego.
 </p>
 </article>
-git commit -m Más información sobre los requisitos del sistema en la página oficial de Steam:  
-🔗 https://store.steampowered.com/app/730/CounterStrike_2/
-</body>
+</p> Más información sobre los requisitos del sistema en la página oficial de Steam:  
+🔗 https://store.steampowered.com/app/730/CounterStrike_2/</p>
+</article>
 
 
 
