agrego link de la pagina del juego
use una etiqueta para que se pueda usar el link

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -76,7 +76,7 @@
 </p>
 </article>
 </p> Más información sobre los requisitos del sistema en la página oficial de Steam:  
-🔗 https://store.steampowered.com/app/730/CounterStrike_2/</p>
+<a href=" https://store.steampowered.com/app/730/CounterStrike_2/">Pagina Oficial</a>
 </article>
 
 
