Agregar título principal
Agregar título principal Counter-Strike 2

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -58,6 +58,11 @@
         para comenzar a cumplir el sueño de ser streamer.
     </p>
 </article>
+<section>
+<h1>Counter-Strike 2</h1>
+<section>
+
+
 <h1>Counter-Strike 2</h1>
 <h2>Requisitos recomendados</h2>
 </article>
