Agregar subtítulo y párrafo introductorio
Agregar subtítulo y descripción de requisitos mínimos

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -60,6 +60,8 @@
 </article>
 <section>
 <h1>Counter-Strike 2</h1>
+<h2>Requisitos mínimos</h2>
+<p>Estos son los requisitos oficiales mínimos publicados por Valve:</p>
 <section>
 
 
