Agregar lista de requisitos mínimos y link de fuente
Agregar lista detallada de requisitos mínimos y link de fuente oficial

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -62,9 +62,17 @@
 <h1>Counter-Strike 2</h1>
 <h2>Requisitos mínimos</h2>
 <p>Estos son los requisitos oficiales mínimos publicados por Valve:</p>
-<section>
-
-
+<ul>
+  <li>Sistema Operativo: Windows 10 (64-bit)</li>
+  <li>Procesador: Intel Core i5-750 o superior (mínimo 4 hilos)</li>
+  <li>Memoria RAM: 8 GB</li>
+  <li>Tarjeta gráfica: 1 GB VRAM, compatible con DirectX 11 y Shader Model 5.0</li>
+  <li>DirectX: Versión 11</li>
+  <li>Almacenamiento: 85 GB libres</li>
+</ul>
+<p>Fuente: <a href="https://www.counterstrike.com/cs2/requisitos" target="_blank">Valve</a></p>
+</section>
+<hr>
 <h1>Counter-Strike 2</h1>
 <h2>Requisitos recomendados</h2>
 </article>
