--- a/grupo_51.html
+++ b/grupo_51.html
@@ -93,7 +93,29 @@
 </p> Más información sobre los requisitos del sistema en la página oficial de Steam:  
 <a href=" https://store.steampowered.com/app/730/CounterStrike_2/">Pagina Oficial</a>
 </article>
+<section>
+<header>
+  <h1>Comparativa de requisitos</h1>
+  <p>Counter-Strike 2 (CS2) vs Valorant</p>
+  <hr>
+</header>
 
+<section class="tabla">
+  <article class="fila">
+    <h2>Sistema operativo</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>Windows 10 64-bit / Linux (Ubuntu 20.04)</div>
+      <div><strong>Valorant:</strong><br>Windows 10/11 64-bit</div>
+    </div>
+  </article>
+</section>
+
+<footer>
+  <p>Nota: Los requisitos pueden variar con actualizaciones.<br>
+  Fuente: páginas oficiales de CS2 y Valorant.</p>
+</footer>
+
+</section>
 
 
 
