Requisitos Cs2 vs Valorant
Se añaden los requisitos de hardware: CPU mínimo y recomendado, memoria RAM y tarjeta gráfica.

--- a/grupo_51.html
+++ b/grupo_51.html
@@ -114,6 +114,39 @@
   <p>Nota: Los requisitos pueden variar con actualizaciones.<br>
   Fuente: páginas oficiales de CS2 y Valorant.</p>
 </footer>
+<section class="tabla">
+  <article class="fila">
+    <h2>CPU mínimo</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>Intel i5-750 / AMD FX-6300</div>
+      <div><strong>Valorant:</strong><br>Intel Core 2 Duo E8400 / AMD Athlon 200GE</div>
+    </div>
+  </article>
+
+  <article class="fila">
+    <h2>CPU recomendado</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>Intel i7 / Ryzen 7</div>
+      <div><strong>Valorant:</strong><br>Intel i3-4150 / Ryzen 3 (60 FPS)<br>i5-9400F / Ryzen 5 (144 FPS)</div>
+    </div>
+  </article>
+
+  <article class="fila">
+    <h2>RAM</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>8 GB mínimo<br>16 GB recomendado</div>
+      <div><strong>Valorant:</strong><br>4 GB mínimo<br>4–8 GB recomendado</div>
+    </div>
+  </article>
+
+  <article class="fila">
+    <h2>GPU</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>GTX 660 / RX 580 (mín.)<br>RTX / RX gama media (recomendado)</div>
+      <div><strong>Valorant:</strong><br>Intel HD 4000 / R5 200 (mín.)<br>GTX 1050 Ti / R7 370 (recomendado)</div>
+    </div>
+  </article>
+</section>
 
 </section>
 
