--- a/grupo_51.html
+++ b/grupo_51.html
@@ -147,7 +147,31 @@
     </div>
   </article>
 </section>
+<section class="tabla">
+  <article class="fila">
+    <h2>Espacio en disco</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>60–85 GB</div>
+      <div><strong>Valorant:</strong><br>30 GB</div>
+    </div>
+  </article>
 
+  <article class="fila">
+    <h2>Optimización</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>Más exigente, depende de CPU/GPU modernas</div>
+      <div><strong>Valorant:</strong><br>Muy optimizado, corre en hardware modesto</div>
+    </div>
+  </article>
+
+  <article class="fila">
+    <h2>FPS competitivo</h2>
+    <div class="columna">
+      <div><strong>CS2:</strong><br>Necesita hardware actual para 144+ FPS</div>
+      <div><strong>Valorant:</strong><br>144+ FPS con CPU i5/Ryzen5 y GPU económica</div>
+    </div>
+  </article>
+</section>
 </section>
 
 
